- Fixed bug #46282 (Corrupt DBF When Using DATE) Patch by: arne at bukkie dot nl